# cmake_illustration

./: .gitignore  CMakeLists.txt  README.md
component_1/: CMakeLists.txt
component_1/config/: my_component_lib.pc.in
component_1/inc/: component_1.hpp
component_1/src/: component_1.cpp
component_2/: CMakeLists.txt
component_2/inc/: component_2.hpp
component_2/src/: component_2.cpp  main.cpp
component_3/: CMakeLists.txt  main.cpp
